<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movieDetails"
            type="com.tentwenty.assignment.model.movieDetail.MovieDetailResponse" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edLocation"
            android:background="@drawable/book_btn_bg"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/enter_location"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edLocation_layout"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintTop_toBottomOf="@+id/location_layout"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edCinema"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/book_btn_bg"
            android:hint="@string/enter_cinema"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edSeatNo_layout"
            android:layout_margin="10dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edLocation_layout"
            >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edSeatNo"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/book_btn_bg"
            android:hint="@string/enter_seat_no"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Book Now"
            android:layout_margin="30dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>