<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="movieDetails"
            type="com.tentwenty.assignment.model.movieDetail.MovieDetailResponse" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.MainActivity">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/movieCoverPager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout" />

        <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:dampingRatio="0.5"
            app:dotsColor="@color/pink"
            app:dotsCornerRadius="2dp"
            app:dotsSize="16dp"
            app:dotsSpacing="6dp"
            app:dotsStrokeColor="@color/pink"
            app:dotsStrokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:stiffness="300" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="-30dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieCoverPager">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{movieDetails.original_title}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Movie Title" />

                <RatingBar
                    android:id="@+id/ratingbar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="10"
                    android:rating="@{movieDetails.vote_average}"
                    android:stepSize="0.1"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <!--<me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingbar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    android:rating="@{movieDetails.vote_average}"
                    android:layout_marginTop="5dp"
                    android:numStars="10"
                    style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small" />-->

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="5"
                    android:text="@{movieDetails.overview}"
                    android:textColor="@color/black_ligt"
                    app:layout_constraintTop_toBottomOf="@+id/ratingbar"
                    tools:text="Movie Description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">


                <TextView
                    android:id="@+id/tvGenreTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{movieDetails.commaSeparatedGenre}"
                    android:textColor="@color/black_ligt"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenreTitle"
                    tools:text="Action, Thriller, Science Fiction" />

                <TextView
                    android:id="@+id/tvDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenres" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@{movieDetails.release_date}"
                    android:textColor="@color/black_ligt"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateTitle" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/no_data_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/watchTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:backgroundTint="@color/pink"
            android:contentDescription="@string/app_name"
            android:text="@string/watch_trailer"
            android:textColor="@color/white"
            app:fabSize="normal"
            app:icon="@drawable/ic_sharp_play_circle_filled_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_sharp_play_circle_filled_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>